@@ -1,15 +1,11 @@
 package pages;
-
 import io.appium.java_client.AppiumBy;
 import io.appium.java_client.android.AndroidDriver;
 import org.openqa.selenium.*;
 import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.interactions.PointerInput;
 import org.openqa.selenium.interactions.Sequence;
-import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.openqa.selenium.support.ui.WebDriverWait;
 import utils.ToastOcrHandler;
-
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
@@ -20,9 +16,9 @@ public class SignUpPage extends BasePage {
         super(driver);
     }
 
-    public boolean isEmailFieldVisible() {
+   /* public boolean isEmailFieldVisible() {
         return waitForVisibility(ElementsPage.SignUpField).isDisplayed();
-    }
+    }*/
 
     protected void enterEmail(String email) {
         sendKeys(ElementsPage.EMAIL_FIELD, email);
@@ -50,7 +46,7 @@ public class SignUpPage extends BasePage {
     }
 
     protected void enterPassword(String password) {
-        waitForVisibility(ElementsPage.password()).sendKeys(password);
+        waitForVisibility(ElementsPage.PASSWORD_FIELD).sendKeys(password);
     }
 
     protected void clickTermsButton() {
@@ -70,7 +66,7 @@ public class SignUpPage extends BasePage {
         clickContinue();
     }
 
-    public void fillPersonalInfo(String firstName, String lastName, String targetCountry) throws InterruptedException {
+    public void fillPersonalInfo(String firstName, String lastName, String targetCountry)  {
         waitForClickability(ElementsPage.FIRST_NAME_FIELD).sendKeys(firstName);
         waitForClickability(ElementsPage.LAST_NAME_FIELD).sendKeys(lastName);
 
@@ -83,23 +79,9 @@ public class SignUpPage extends BasePage {
         scrollToElementAndClick(targetCountry);
 
         waitForClickability(ElementsPage.FINISH_BUTTON).click();
-        Thread.sleep(2500);
     }
 
-    public void toastMessage() {
 
-        String parsedText = ToastOcrHandler.captureAndReadToast(driver);
-
-        parsedText = parsedText.replaceAll("\\s+", " ");
-
-        String expectedErrorMessage = "Please enter a valid e-mail address!";
-
-        if (parsedText.contains(expectedErrorMessage)) {
-            System.out.println("✅ Test Passed! Validation message detected via OCR.");
-        } else {
-            System.out.println("❌ Test Failed. Expected: '" + expectedErrorMessage + "' but OCR found: " + parsedText);
-        }
-    }
 
     public boolean verifyErrorMessageViaOcr(String expectedErrorMessage) {
         String parsedText = ToastOcrHandler.captureAndReadToast(driver);
@@ -126,10 +108,7 @@ public class SignUpPage extends BasePage {
             cleanKeyword = cleanKeyword.split(",")[0].trim();
         }
 
-        WebDriverWait dropdownWait = new WebDriverWait(driver, Duration.ofSeconds(3));
-        WebElement scrollView = dropdownWait.until(ExpectedConditions.visibilityOfElementLocated(
-                AppiumBy.className("android.widget.ScrollView")
-        ));
+        WebElement scrollView = ElementsPage.scrollToAndGetCountry();
 
         // Get screen container bounds
         org.openqa.selenium.Rectangle containerRect = scrollView.getRect();
@@ -150,7 +129,7 @@ public class SignUpPage extends BasePage {
                 List<WebElement> elements = scrollView.findElements(AppiumBy.xpath(lowerCaseXpath));
 
                 if (!elements.isEmpty()) {
-                    WebElement targetItem = elements.get(0);
+                    WebElement targetItem = elements.getFirst();
                     if (targetItem.isDisplayed()) {
                         try {
                             // Click the parent wrapper container node
@@ -195,7 +174,6 @@ public class SignUpPage extends BasePage {
 
         swipeSequence.addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), startX, startY));
         swipeSequence.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
-        // Adjusted duration to 350ms for a swift slide gesture instead of a slow sticky drag
         swipeSequence.addAction(finger.createPointerMove(Duration.ofMillis(350), PointerInput.Origin.viewport(), startX, endY));
         swipeSequence.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
 
